# sfml_helper_library

./: CMakeLists.txt  LICENSE  build.sh  readme.md
headers/audio/: sound.h
headers/core/: time.h
headers/entities/: sprites.h
headers/graphics/: color.h  window.h
src/: main.c
src/audio/: sound.c
src/core/: time.c
src/entities/: sprites.c
src/graphics/: color.c  window.c
